@@ -1,1 +1,0 @@
-{"S3Region":"eu-west-1","S3Bucket":"htgbas-pre-prod","Ignore":null,"IncludeNonGit":null}
