@@ -18,6 +18,7 @@ func main() {
 
 	flag.StringVar(&repo.Config.S3Bucket, "b", repo.Config.S3Bucket, "Destination S3 bucket name")
 	flag.StringVar(&repo.Config.S3Region, "r", repo.Config.S3Region, "AWS region of destination bucket")
+	flag.BoolVar(&repo.Config.Public, "public", repo.Config.Public, "Make uploaded files publicly readable")
 	saveConfig := flag.Bool("save", false, "Save destination region/bucket to config file")
 	forceNonTracked := flag.Bool("force-external", false, "Force the upload of files not tracked in git (IncludeNonGit files in config)")
 	flag.Parse()
